tests/sksl/errors/DivideByZero.glsl
### Compilation failed:

error: 1: division by zero
int a = 1 / 0;
        ^^^^^
error: 2: division by zero
float b = 1 / 0;
          ^^^^^
error: 3: division by zero
float c = 1.0 / 0.0;
          ^^^^^^^^^
error: 4: division by zero
float d = -67.0 / (3.0 - 3);
          ^^^^^^^^^^^^^^^^^
4 errors
